[tool.poetry]
name = "pet-cam-server"
version = "0.1.0"
description = ""
authors = ["Loren Aguey <loren@blackcatdev.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
python-socketio = "^5.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
